syntax = "proto3";
option csharp_namespace = "Rpc";

package Rpc;

service Transport {
  rpc Unary (RpcRequest) returns (RpcResponse);
  rpc ServerStream (RpcRequest) returns (stream RpcResponse);
}

message RpcRequest {
  string text = 1;
}

message RpcResponse {
  string message = 1;
}